--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Cris Resumee - Professional Portfolio showcasing job experiences, skills, and career journey. View my work history and connect with me." />
+    <meta name="description" content="Página personal de Cristian mostrando experiancia laboral, habilidades y otros proyectos. Contacta conmigo." />
     <meta name="keywords" content="portfolio, resume, job experience, professional, career" />
-    <meta name="author" content="Cris" />
-    <title>Cris Resumee - Professional Portfolio</title>
+    <meta name="author" content="Cristian (chgaro)" />
+    <title>Cristian - Página personal</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
